fixed minor spacing bug on dashboard page

--- a/src/styles/pages/DashboardPage.css
+++ b/src/styles/pages/DashboardPage.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  padding: 5rem;
 }
 
 .dashboard__title {
@@ -12,16 +12,16 @@
 }
 
 .dashboard__subtitle {
+  border-bottom: solid 2px var(--theme-color-dark);
   font-size: 2rem;
   margin: 1rem;
-  border-bottom: solid 2px var(--theme-color-dark);
   padding-bottom: 0.4rem;
 }
 
 /* 'Your Potlucks' Cards */
 
 .potluck-card {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
